k8s-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: prod
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # For testing without HTTPS
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      # Backend API - all /api calls go here    
      - path: /api 
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

        # Frontend - serves React app
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
